--- a/CSS/Mean.css
+++ b/CSS/Mean.css
@@ -834,6 +834,7 @@ ul {
   top: 0;
   height: 100%;
   background-color: var(--main-color);
+  transition: width 0.5s linear;
 }
 /* End Skills */
 /* Start Work Steps */
